@@ -28,13 +28,13 @@ def test_link(app, admin_user):
     url = reverse('admin:demo_demomodel1_changelist')
     res = app.get(url, user=admin_user)
     res = res.click('Refresh').follow()
-    assert map(str, res.context['messages']) == ['refresh called']
+    assert str(res.context['messages']._loaded_messages[0].message) == 'refresh called'
 
 
 def test_link_reverse(app, admin_user):
     url = reverse('admin:demo_demomodel1_refresh')
     res = app.get(url, user=admin_user).follow()
-    assert map(str, res.context['messages']) == ['refresh called']
+    assert str(res.context['messages']._loaded_messages[0].message) == 'refresh called'
 
 
 def test_link_custom_path_reverse(app, admin_user):
@@ -46,12 +46,12 @@ def test_link_custom_path_reverse(app, admin_user):
 def test_action(app, demomodel2, admin_user):
     url = reverse('admin:demo_demomodel2_change', args=[demomodel2.pk])
     res = app.get(url, user=admin_user)
-    res = res.click(' Update').follow()
-    assert map(str, res.context['messages']) == ['action called']
+    res = res.click(r' Update', index=1).follow()
+    assert str(res.context['messages']._loaded_messages[0].message) == 'action called'
 
 
 def test_default_httpresponseaction(app,  admin_user):
     url = reverse('admin:demo_demomodel1_changelist')
     res = app.get(url, user=admin_user)
-    res = res.click('No_Response').follow()
-    assert map(str, res.context['messages']) == ['No_response']
+    res = res.click('No Response').follow()
+    assert str(res.context['messages']._loaded_messages[0].message) == 'No_response'
