@@ -1,12 +1,14 @@
 [tox]
-envlist = {py27}-{d14,d15,d16,d17,d18}
+envlist = {py27,py33,py34}-{d16,d17}
 
 [pytest]
 norecursedirs = data .tox iflow
 addopts =
+        -vvv
         -p no:sugar
         -p no:xdist
         -p no:pep8
+        --echo-env=PYTHONHASHSEED
         --tb=short
         --capture=no
 
@@ -14,15 +16,19 @@ python_files=test_*.py
 pep8ignore = * ALL
 
 [testenv]
-whitelist_externals = make
-                      echo
-                      /bin/sh
-
+;usedevelop=true
+setenv =
+;    PYTHONHASHSEED=random
+    PYTHONPATH = {toxinidir}/tests
+    DJANGO_SETTINGS_MODULE=demo.settings
 deps=
     pytest
     pytest-django
     pytest-echo
     psycopg2
+    django_dynamic_fixture
+    django_webtest
+    webtest
     d14: django>=1.4,<1.5
     d15: django>=1.5,<1.6
     d16: django>=1.6,<1.7
@@ -30,5 +36,5 @@ deps=
     d18: git+git://github.com/django/django.git
 
 commands =
-    py.test tests
+    py.test tests/ {posargs}
 
