@@ -1,5 +1,7 @@
 Release 0.2 (dev)
 -----------------
+
+* python 3.3, 3.4 compatibility
 * add ability to customize the upload template
 * disable button after click to prevent double click
 * improved automatic button's label creation
